2004-04-28  Jackson Harper  <jackson@ximian.com>

	* scripts/Makefile.am:
	* scripts/gacutil.in: Add a gacutil script

2004-04-26  Jackson Harper  <jackson@ximian.com>

	* Makefile.am: Grab libraries from lib/default now.
	* runtime/Makefile.am: Grab libraries from lib/default now.
	
2004-04-26  Bernie Solomon  <bernard@ugsolutions.com>

	* configure.in: move setting of NO_VERSION_SCRIPT
	until after checking for GNU ld

2004-04-22  Urs C Muff <umuff@quark.com>

	move .net assemblies from $prefix/bin/*.exe to $prefix/lib/*.exe on windows/cygwin
	refactor .nsi to simply maintenance on script/batch generation
	* runtime/Makefile.am
	* script/Makefile.am
	* monowiz.win32.nsi

2004-04-14  Raja R Harinath  <rharinath@novell.com>

	* runtime/Makefile.am ($(assemblies_DATA)): Copy file into
	$(srcdir).  Clean up output.
	($(monobins_DATA)): Likewise.

	* Makefile.am (mcs-tree-safe-build): Fix typo.

2004-04-13  Sebastien Pouliot  <sebastien@ximian.com>

	* configure.in: Added rules to check for getgrgid_r, getgrnam_r,
	getpwnam_r, getpwuid_r, getresuid and setresuid.

2004-04-13  Raja R Harinath  <rharinath@novell.com>

	Allow 'make fullbuild' to work on non-srcdir build.
	* Makefile.am (mcs_topdir): New variable.
	(mcs-tree-safe-build,mcs-rest,remove-binaries): Work in non-srcdir
	build.
	(xinstall-runtime): Likewise.  Use $(libgc_dir) directly, don't
	grep for 'libgc'.
	(fullbuild): Make ordering dependencies explicit.
	
2004-04-12  Sachin Kumar <skumar1@novell.com>

	* Makefile.am: Added 'web' in SUBDIRS

2004-04-07  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: don't try-run the tests for nptl and/or sigaltstack
	if they are disabled in the command line.

2004-04-05  Jackson Harper  <jackson@ximian.com>

	* man/ilasm.1: Show /output instead of /out as the switch for
	specifying output file names.

2004-04-05  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Check for pthread_getattr_np and pthread_attr_get_np.
