@@ -282,10 +282,12 @@ typedef struct {
 	WapiOverlappedCB callback;
 } notifier_data_t;
 
+#define SIGPTR(a) a.SIGVAL_PTR
+
 static void
 async_notifier (union sigval sig)
 {
-	notifier_data_t *ndata = sig.sival_ptr;
+	notifier_data_t *ndata = SIGPTR (sig);
 	guint32 error;
 	guint32 numbytes;
 
@@ -385,7 +387,7 @@ static gboolean file_read(gpointer handle, gpointer buffer,
 	aio->aio_buf = buffer;
 	aio->aio_sigevent.sigev_notify = SIGEV_THREAD;
 	aio->aio_sigevent.sigev_notify_function = async_notifier;
-	aio->aio_sigevent.sigev_value.sival_ptr = ndata;
+	SIGPTR (aio->aio_sigevent.sigev_value) = ndata;
 
 	result = aio_read (aio);
 	if (result == -1) {
@@ -492,7 +494,7 @@ static gboolean file_write(gpointer handle, gconstpointer buffer,
 	aio->aio_buf = (gpointer) buffer;
 	aio->aio_sigevent.sigev_notify = SIGEV_THREAD;
 	aio->aio_sigevent.sigev_notify_function = async_notifier;
-	aio->aio_sigevent.sigev_value.sival_ptr = ndata;
+	SIGPTR (aio->aio_sigevent.sigev_value) = ndata;
 
 	result = aio_write (aio);
 	if (result == -1) {
